[master] adjust get endpoints

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -187,4 +187,6 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-# application:
+#application:
+#  base:
+#    link: 'http://localhost:8080/redirect/'
