[work/redirection-update] server config

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -166,7 +166,7 @@ jhipster:
   #     allow-credentials: true
   #     max-age: 1800
   mail:
-    from: FluidQrServer@localhost
+    from: noreply@7lofficial.de
   swagger:
     default-include-pattern: /api/.*
     title: FluidQrServer API
