[work/redirection-update] db password

--- a/src/main/docker/mysql.yml
+++ b/src/main/docker/mysql.yml
@@ -5,6 +5,7 @@ services:
     # volumes:
     #     - ~/volumes/jhipster/FluidQrServer/mysql/:/var/lib/mysql/
     environment:
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_USER=fluidqruser
       - MYSQL_PASSWORD=fluidqruserpw
       - MYSQL_DATABASE=fluidqrserver
