[prod-alpha-preperation]fix tests

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -121,4 +121,7 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-# application:
+application:
+  url:
+    base: 'localhost:8080'
+    protocol: 'http://'
