--- a/src/main/docker/jhipster-registry.yml
+++ b/src/main/docker/jhipster-registry.yml
@@ -1,7 +1,8 @@
-version: '2'
+version: '2.4'
 services:
   jhipster-registry:
-    image: jhipster/jhipster-registry:v6.3.0
+    image: jhipster/jhipster-registry:v7.1.0
+    #    platform: linux/arm64/v8
     volumes:
       - ./central-server-config:/central-config
     # When run with the "dev" Spring profile, the JHipster Registry will
