--- a/src/main/docker/mysql.yml
+++ b/src/main/docker/mysql.yml
@@ -1,7 +1,8 @@
-version: '2'
+version: '2.4'
 services:
   fluidqrserver-mysql:
-    image: mysql:8.0.20
+    image: mysql:latest
+    platform: linux/x86_64/v8
     # volumes:
     #     - ~/volumes/jhipster/FluidQrServer/mysql/:/var/lib/mysql/
     environment:
