[prod-alpha-preperation] config traefik

--- a/src/main/docker/dynamic/http.routers.fluidqrserver-docker-localhost.yml
+++ b/src/main/docker/dynamic/http.routers.fluidqrserver-docker-localhost.yml
@@ -1,5 +1,7 @@
 http:
   routers:
-    fluidqrserver-docker-localhost:
-      rule: Host(`fluidqrserver.docker.localhost`)
+    fluidqr:
+      rule: Host(`fluidqr.7lofficial.de`)
       service: fluidqrserver@file
+      tls:
+        certResolver: myresolver
