[work/redirection-update] favicon

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fluid-qr-server",
   "version": "0.0.1-SNAPSHOT",
-  "description": "Description for FluidQrServer",
+  "description": "FLUID QR by [bild:werk] medien",
   "private": true,
   "license": "UNLICENSED",
   "cacheDirectories": [
