--- a/package.json
+++ b/package.json
@@ -94,14 +94,14 @@
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
-    "swagger-ui-dist": "4.1.2",
+    "swagger-ui-dist": "^4.1.3",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "12.1.3",
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-builders/jest": "12.1.2",
-    "@angular-devkit/build-angular": "12.2.12",
+    "@angular-devkit/build-angular": "^13.1.2",
     "@angular-eslint/eslint-plugin": "12.7.0",
     "@angular/cli": "12.2.12",
     "@angular/compiler-cli": "12.2.12",
@@ -118,7 +118,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-webpack-plugin": "3.1.1",
     "folder-hash": "4.0.1",
-    "generator-jhipster": "7.4.1",
+    "generator-jhipster": "^7.4.1",
     "husky": "7.0.4",
     "jest": "27.4.3",
     "jest-date-mock": "1.0.8",
