--- a/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/config/bootstrap-prod.yml
@@ -10,13 +10,13 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         max-attempts: 100
-      uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+      uri: ${SPRING_DATASOURCE_URL}
       # name of the config server's property source (file.yml) that we want to use
-      name: FluidQrServer
+      name: fluidqrserver
       profile: prod # profile(s) of the property source
-      label: main # toggle to switch to a different version of the configuration as stored in git
+      label: master # toggle to switch to a different version of the configuration as stored in git
       # it can be set to any label, branch or commit of the configuration source Git repository
 
 jhipster:
   registry:
-    password: admin
+    password: ${JHIPSTER_REGISTRY_PASSWORD}
