--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,29 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>provided</scope>
         </dependency>
+
+<!--        YouTube-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>2.6.3</version>
+         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.33.1</version>
+        </dependency>
+         <dependency>
+                    <groupId>com.google.oauth-client</groupId>
+                    <artifactId>google-oauth-client-jetty</artifactId>
+                    <version>1.33.0</version>
+                </dependency>
+                <dependency>
+                      <groupId>com.google.apis</groupId>
+                      <artifactId>google-api-services-youtube</artifactId>
+                      <version>v3-rev20210915-1.32.1</version>
+                  </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
 
