--- a/package.json
+++ b/package.json
@@ -66,7 +66,15 @@
     "webapp:dev-ssl": "ng serve --ssl",
     "webapp:dev-verbose": "ng serve --verbose",
     "webapp:prod": "npm run clean-www && npm run webapp:build:prod",
-    "webapp:test": "npm run test --"
+    "webapp:test": "npm run test --",
+    "e2e": "npm run e2e:protractor --",
+    "e2e:dev": "concurrently -k -s first \"./mvnw\" \"npm run e2e\"",
+    "e2e:devserver": "concurrently -k -s first \"npm run backend:start\" \"npm start\" \"wait-on -t 180000 http-get://localhost:9000 && npm run e2e:headless -- -c baseUrl=http://localhost:9000\"",
+    "pree2e:headless": "npm run ci:server:await",
+    "e2e:headless": "npm run e2e:protractor:headless --",
+    "e2e:protractor": "protractor src/test/javascript/protractor.conf.js",
+    "e2e:protractor:headless": "npm run e2e:protractor --",
+    "e2e:update-webdriver": "webdriver-manager update --gecko false"
   },
   "config": {
     "backend_port": "8080",
@@ -106,12 +114,19 @@
     "@angular/cli": "13.3.1",
     "@angular/compiler-cli": "13.3.1",
     "@angular/service-worker": "13.3.1",
+    "@types/chai": "^4.3.1",
+    "@types/chai-string": "^1.4.2",
     "@types/jest": "27.4.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "16.11.26",
+    "@types/selenium-webdriver": "^4.0.19",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "browser-sync": "2.27.9",
     "browser-sync-webpack-plugin": "2.3.0",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-string": "1.5.0",
     "concurrently": "7.1.0",
     "copy-webpack-plugin": "10.2.4",
     "eslint": "8.12.0",
@@ -127,14 +142,17 @@
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "12.3.7",
     "merge-jsons-webpack-plugin": "2.0.1",
+    "mocha": "8.2.1",
     "prettier": "2.6.2",
     "prettier-plugin-java": "1.6.1",
     "prettier-plugin-packagejson": "2.2.17",
+    "protractor": "7.0.0",
     "rimraf": "3.0.2",
     "swagger-ui-dist": "4.10.3",
     "ts-jest": "27.1.4",
     "typescript": "4.6.3",
     "wait-on": "6.0.1",
+    "webdriver-manager": "12.1.8",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-merge": "5.8.0",
     "webpack-notifier": "1.15.0"
