--- a/src/main/kubernetes/fluidqrserver-k8s/fluidqrserver-mysql.yml
+++ b/src/main/kubernetes/fluidqrserver-k8s/fluidqrserver-mysql.yml
@@ -25,9 +25,15 @@ spec:
             - name: MYSQL_DATABASE
               value: fluidqrserver
             - name: MYSQL_PASSWORD
-              value: fluidqruserpw
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: password
             - name: MYSQL_USER
-              value: fluidqruser
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: user
           args:
             - --lower_case_table_names=1
             - --skip-ssl
