add network policies for pod ingress
- limit ingress to fuidqr server to port 80,443
- limit ingress to mysql to same namespace and port 53
- limit ingress to registry to same namespace and port 8761

--- a/src/main/kubernetes/kustomization.yml
+++ b/src/main/kubernetes/kustomization.yml
@@ -17,3 +17,7 @@ resources:
   - secrets/db-credentials.yml
   - secrets/jhipster-authentication.yml
   - secrets/registry-admin-password.yml
+  #network policies
+  - network-policy/fluidqr-server.yml
+  - network-policy/fluidqr-mysql.yml
+  - network-policy/jhipster-registry.yml
